--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville_population = greenville(PopulkationNone # change None\n",
+    "greenville_population = greenville('Populkation') # change None\n",
     "greenville_population # 93"
    ]
   },
