--- a/index.ipynb
+++ b/index.ipynb
@@ -94,6 +94,7 @@
     }
    ],
    "source": [
+    "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "greenville_population = greenville('Population') # change None\n",
     "greenville_population # 93"
    ]
