Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -95,6 +95,7 @@
    ],
    "source": [
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
+    "greenville\n",
     "greenville_population = greenville('Population') # change None\n",
     "greenville_population # 93"
    ]
