Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
    "source": [
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "greenville\n",
-    "greenville_population = gree'Population') # change None\n",
+    "greenville_population = Population') # change None\n",
     "greenville_population # 93"
    ]
   },
