Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -94,6 +94,9 @@
     }
    ],
    "source": [
+    "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
+    "\n",
+    "\n",
     "greenville_population = \n",
     "greenville_population # 93"
    ]
