Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,7 @@
    ],
    "source": [
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
-    "\n",
+    "greenville\n",
     "\n",
     "greenville_population = \n",
     "greenville_population # 93"
