Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -97,7 +97,7 @@
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "greenville\n",
     "\n",
-    "greenville_population = gree\n",
+    "greenville_population = greenville \n",
     "greenville_population # 93"
    ]
   },
