--- a/index.ipynb
+++ b/index.ipynb
@@ -113,6 +113,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
+    "greenville\n",
     "greenville_area = None\n",
     "greenville_area # 68"
    ]
