Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,7 @@
    "source": [
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "greenville\n",
-    "greenville_area = None\n",
+    "greenville_area = greenville\n",
     "greenville_area # 68"
    ]
   },
