--- a/index.ipynb
+++ b/index.ipynb
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_keys = []\n",
+    "city_keys = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
