Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,7 @@
    "outputs": [],
    "source": [
     "city_keys = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
-    "city_keys =  # ['Area', 'City', 'Country', 'Population']"
+    "city_keys = list # ['Area', 'City', 'Country', 'Population']"
    ]
   },
   {
