Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,8 @@
    "outputs": [],
    "source": [
     "city_keys = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
-    "city_keys = list # ['Area', 'City', 'Country', 'Population']"
+    "city_keys = list\n",
+    "city keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
   {
