Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,7 @@
    ],
    "source": [
     "city_keys = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
-    "city_keys = list(data.values ())\n",
+    "city_keys = list(data.values (city))\n",
     "city keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
