Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
    ],
    "source": [
     "city_keys = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
-    "city_keys = list(data.values (city_keys))\n",
+    "city_keys = list(data.city_keys()ty_keys))\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
