Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -173,7 +173,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_values = None\n",
+    "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
+    "greenvillecity_values = None\n",
     "city_values # [68, 'Greenville', 'USA', 93]"
    ]
   },
