Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -174,7 +174,9 @@
    "outputs": [],
    "source": [
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
-    "greenvillecity_values = None\n",
+    "greenville\n",
+    "\n",
+    "city_values = None\n",
     "city_values # [68, 'Greenville', 'USA', 93]"
    ]
   },
