--- a/index.ipynb
+++ b/index.ipynb
@@ -176,7 +176,7 @@
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "greenville\n",
     "\n",
-    "city_values = None\n",
+    "city_values = list(greenville)\n",
     "city_values # [68, 'Greenville', 'USA', 93]"
    ]
   },
