--- a/index.ipynb
+++ b/index.ipynb
@@ -323,11 +323,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "salina = cities[-] \n",
+    "salina = cities[-3]\n",
+    "\n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
