--- a/index.ipynb
+++ b/index.ipynb
@@ -387,7 +387,7 @@
    },
    "outputs": [],
    "source": [
-    "city_count = None\n",
+    "city_count = l\n",
     "city_count # 12"
    ]
   },
